--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "espressif idf build"
-description: "This action build your firmware directly in github using Espressif idf SDK."
+name: "ctag esp idf build"
+description: "This action build your firmware directly in github using Espressif esp idf."
 branding:
   color: blue
   icon: check
